# webidl-index

./: .gitignore  Cargo.toml  justfile
.github/workflows/: deploy.yml  refresh-index.yml
canonwit/: Cargo.toml
canonwit/src/: casts.rs  emit.rs  input.rs  lib.rs  main.rs  names.rs  report.rs  symbols.rs  typing.rs  unions.rs
data/: manifest.json
data/snapshots/blink/: 10.json  100.index.json  100.json  101.index.json  101.json  102.index.json  102.json  103.index.json  103.json  104.index.json  104.json  105.index.json  105.json  106.index.json  106.json  107.index.json  107.json  108.index.json  108.json  109.index.json  109.json  11.json  110.index.json  110.json  111.index.json  111.json  112.index.json  112.json  113.index.json  113.json  114.index.json  114.json  115.index.json  115.json  116.index.json  116.json  117.index.json  117.json  118.index.json  118.json  (+188 more)
data/snapshots/gecko/: 100.index.json  100.json  101.index.json  101.json  102.index.json  102.json  103.index.json  103.json  104.index.json  104.json  105.index.json  105.json  106.index.json  106.json  107.index.json  107.json  108.index.json  108.json  109.index.json  109.json  (+192 more)
indexer/: Cargo.toml
indexer/config/: engines.toml
indexer/src/: config.rs  fetch.rs  main.rs  merge.rs  model.rs  parse.rs  render.rs  search_index.rs  store.rs  versions.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  app.css  app.tsx  comparestats.ts  diff.ts  explore.ts  format.ts  index.css  merge.ts  router.ts  search.ts  tokens.ts  types.ts  webidlAttributes.ts
(+39 files in other folders)
