[package]
name = "canonwit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
common = { path = "../common" }
heck = "0.5.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
weedle = "0.13.1"
wit-encoder = "0.253.0"
