[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
common = { path = "../common" }
hex = "0.4.3"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.2"
ureq = "3.3.0"
walkdir = "2.5.0"
weedle = "0.13.1"
